Fri Apr  7 09:12:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Log/Basic_Log_Test/Basic_Log_Test.cpp:
          Removed include of orbsvcs/Time_Utilities.h, it is not needed and
          caused errors in some builds because this app wasn't build after
          the svc_utils anymore

Thu Apr  6 18:18:47 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * tao/Strategies/advanced_resource.cpp (input_cdr_buffer_allocator):

          Modified this method to defer to the TAO_Default_Resource_Factory
          for the input_cdr_buffer_allocator if the allocator type is not
          TAO_ALLOCATOR_NULL_LOCK.  In the event that the user has chosen
          not to use the memory pool allocator, they will get the right type
          of input cdr buffer allocator.

Thu Apr  6 00:33:35 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tao/ORB_Core.cpp:

          Fixing the usage of the correct dynamic service names, for the
          case of TAO built with support for dynamic linking. Thanks to
          Ossama Othman <Ossama_Othman at symantec dot com> for providing
          the patch.

Wed Apr  5 22:39:28 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_2494_Regression/Bug_2494_Regression.mpc:
        * tests/Bug_2494_Regression/README:
        * tests/Bug_2494_Regression/client.cpp:
        * tests/Bug_2494_Regression/run_test.pl:
        * tests/Bug_2494_Regression/server.cpp:
        * tests/Bug_2494_Regression/test.idl:
        * tests/Bug_2494_Regression/test_i.h:
        * tests/Bug_2494_Regression/test_i.inl:
        * tests/Bug_2494_Regression/test_i.cpp:

          Added a regression test for Bugzilla bug #2494.

        * tao/Transport.cpp (~Transport):

          Added back the ACE_ASSERTS, needed for the regression test above.
          See Bugzilla bug #2494.

Tue Apr  4 22:03:35 UTC 2006  Wallace Zhang  <zhangw@ociweb.com>

        * orbsvcs/examples/ImR/Advanced/TestClient.h: